# More CORE support for grouped fields, minor fixes for latest changes in fields made for grouping and for enhanced server-side validation and frontend encoded display.

--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -1119,6 +1119,9 @@ div.current dd {
 	-moz-border-radius: 5px !important;
 	-webkit-border-radius: 5px !important;
 }
+.fc_image_thumb {
+	display: inline-block;
+}
 
 /* ADD button used by fields (item form) */
 .button-add a {
