--- a/site/assets/css/flexicontent.css
+++ b/site/assets/css/flexicontent.css
@@ -1637,8 +1637,8 @@ div.fancybox-wrap a { background: none!important;}
 	text-align: right !important;
 	max-width: 120px !important;
 	min-width: auto !important;
-	margin: 2px 6px 2px 2px !important;
-	padding: 3px 4px !important;
+	margin: 2px 6px 2px 2px;
+	padding: 3px 4px;
 	border-radius: 5px !important;
 }
 
