--- a/site/assets/css/flexi_frontend.css
+++ b/site/assets/css/flexi_frontend.css
@@ -880,7 +880,6 @@ ul.fc_field_filter.fc_checkradio_group label {
 #flexicontent .fc_field_label {
 	float: left;
 	border-bottom: 1px solid silver;
-	color: #777;
 	font-size: 90%;
 	margin-right: 8px;
 	display:block;
@@ -1633,6 +1632,7 @@ div.fancybox-wrap a { background: none!important;}
 	line-height: 14px;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
 	
+	font-size: 11px;
 	font-style: normal;
 	font-family: arial;
 	text-align: right;
